ci(lerna): move playwright installation script to respective packages

--- a/integration/playwright-web/package.json
+++ b/integration/playwright-web/package.json
@@ -18,6 +18,7 @@
     "internal"
   ],
   "scripts": {
+    "postbootstrap": "playwright install --with-deps",
     "clean": "rimraf target ../../target/coverage/integration-playwright-web",
     "test": "failsafe clean test:update-serenity test:acceptance test:report",
     "test:update-serenity": "serenity-bdd update --ignoreSSL",
