--- a/package.json
+++ b/package.json
@@ -71,12 +71,13 @@
     "coverage:publish": "cat ./target/coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js",
     "commit": "bin/commit.ts",
     "lerna": "lerna",
-    "lerna:bootstrap:all": "lerna bootstrap",
-    "lerna:bootstrap:libs": "lerna bootstrap --scope '@serenity-js/*' --scope '@integration/testing-tools' --scope '@integration/cucumber-specs' --ignore='@documentation/*' --ignore '@examples/*' --include-dependencies",
-    "lerna:bootstrap:site": "lerna bootstrap --scope '@serenity-js/*' --scope '@documentation/*' --ignore '@integration/*' --ignore '@examples/*' --include-dependencies",
-    "lerna:bootstrap:@serenity-js": "lerna bootstrap --scope '@serenity-js/*' --ignore='@documentation/*' --ignore '@examples/*' --ignore '@integration/*' --include-dependencies",
-    "lerna:bootstrap:@integration": "lerna bootstrap --scope '@serenity-js/*' --scope '@integration/*' --ignore='@documentation/*' --ignore '@examples/*' --include-dependencies",
-    "lerna:bootstrap:@examples": "lerna bootstrap --scope '@serenity-js/*' --scope '@examples/*' --ignore='@documentation/*' --ignore '@integration/*' --include-dependencies",
+    "lerna:bootstrap:all": "lerna bootstrap && npm run lerna:postbootstrap",
+    "lerna:postbootstrap": "lerna run postbootstrap",
+    "lerna:bootstrap:libs": "lerna bootstrap --scope '@serenity-js/*' --scope '@integration/testing-tools' --scope '@integration/cucumber-specs' --ignore='@documentation/*' --ignore '@examples/*' --include-dependencies && npm run lerna:postbootstrap",
+    "lerna:bootstrap:site": "lerna bootstrap --scope '@serenity-js/*' --scope '@documentation/*' --ignore '@integration/*' --ignore '@examples/*' --include-dependencies && npm run lerna:postbootstrap",
+    "lerna:bootstrap:@serenity-js": "lerna bootstrap --scope '@serenity-js/*' --ignore='@documentation/*' --ignore '@examples/*' --ignore '@integration/*' --include-dependencies && npm run lerna:postbootstrap",
+    "lerna:bootstrap:@integration": "lerna bootstrap --scope '@serenity-js/*' --scope '@integration/*' --ignore='@documentation/*' --ignore '@examples/*' --include-dependencies && npm run lerna:postbootstrap",
+    "lerna:bootstrap:@examples": "lerna bootstrap --scope '@serenity-js/*' --scope '@examples/*' --ignore='@documentation/*' --ignore '@integration/*' --include-dependencies && npm run lerna:postbootstrap",
     "lerna:bootstrap:@documentation": "lerna bootstrap --scope '@serenity-js/*' --scope '@documentation/*' --ignore '@examples/*' --ignore='@integration/*' --include-dependencies",
     "lerna:publish": "lerna publish --yes",
     "lerna:test:version": "lerna version --no-git-tag-version --no-push",
@@ -114,7 +115,6 @@
     "lerna": "^6.1.0",
     "mocha-testdata": "^1.2.0",
     "nyc": "15.1.0",
-    "playwright-core": "1.29.0",
     "rimraf": "^3.0.2",
     "semver": "^7.3.8",
     "sinon": "^15.0.1",
