--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -26,6 +26,7 @@
     "testing"
   ],
   "scripts": {
+    "postbootstrap": "playwright install --with-deps",
     "clean": "rimraf '../../target/coverage/playwright'",
     "~test": "nyc mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'",
     "compile": "rimraf lib && tsc --project tsconfig.build.json"
