--- a/package.json
+++ b/package.json
@@ -71,13 +71,13 @@
     "coverage:publish": "cat ./target/coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js",
     "commit": "bin/commit.ts",
     "lerna": "lerna",
-    "lerna:bootstrap:all": "lerna bootstrap && npm run lerna:postbootstrap",
-    "lerna:postbootstrap": "lerna run postbootstrap",
-    "lerna:bootstrap:libs": "lerna bootstrap --scope '@serenity-js/*' --scope '@integration/testing-tools' --scope '@integration/cucumber-specs' --ignore='@documentation/*' --ignore '@examples/*' --include-dependencies && npm run lerna:postbootstrap",
-    "lerna:bootstrap:site": "lerna bootstrap --scope '@serenity-js/*' --scope '@documentation/*' --ignore '@integration/*' --ignore '@examples/*' --include-dependencies && npm run lerna:postbootstrap",
-    "lerna:bootstrap:@serenity-js": "lerna bootstrap --scope '@serenity-js/*' --ignore='@documentation/*' --ignore '@examples/*' --ignore '@integration/*' --include-dependencies && npm run lerna:postbootstrap",
-    "lerna:bootstrap:@integration": "lerna bootstrap --scope '@serenity-js/*' --scope '@integration/*' --ignore='@documentation/*' --ignore '@examples/*' --include-dependencies && npm run lerna:postbootstrap",
-    "lerna:bootstrap:@examples": "lerna bootstrap --scope '@serenity-js/*' --scope '@examples/*' --ignore='@documentation/*' --ignore '@integration/*' --include-dependencies && npm run lerna:postbootstrap",
+    "lerna:bootstrap:all": "lerna bootstrap && npm run lerna:postbootstrap:playwright",
+    "lerna:postbootstrap:playwright": "lerna run postbootstrap --scope '@serenity-js/playwright*' --scope '@integration/playwright*' --scope '@examples/playwright*'",
+    "lerna:bootstrap:libs": "lerna bootstrap --scope '@serenity-js/*' --scope '@integration/testing-tools' --scope '@integration/cucumber-specs' --ignore='@documentation/*' --ignore '@examples/*' --include-dependencies",
+    "lerna:bootstrap:site": "lerna bootstrap --scope '@serenity-js/*' --scope '@documentation/*' --ignore '@integration/*' --ignore '@examples/*' --include-dependencies",
+    "lerna:bootstrap:@serenity-js": "lerna bootstrap --scope '@serenity-js/*' --ignore='@documentation/*' --ignore '@examples/*' --ignore '@integration/*' --include-dependencies",
+    "lerna:bootstrap:@integration": "lerna bootstrap --scope '@serenity-js/*' --scope '@integration/*' --ignore='@documentation/*' --ignore '@examples/*' --include-dependencies",
+    "lerna:bootstrap:@examples": "lerna bootstrap --scope '@serenity-js/*' --scope '@examples/*' --ignore='@documentation/*' --ignore '@integration/*' --include-dependencies",
     "lerna:bootstrap:@documentation": "lerna bootstrap --scope '@serenity-js/*' --scope '@documentation/*' --ignore '@examples/*' --ignore='@integration/*' --include-dependencies",
     "lerna:publish": "lerna publish --yes",
     "lerna:test:version": "lerna version --no-git-tag-version --no-push",
