--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -159,12 +159,11 @@ jobs:
         ]
       runs-on: 'ubuntu-latest'
       node-version: 16.x
-      npm-install-command: |
-        make BOOTSTRAP_SCOPE=@integration install && \
-        npm run lerna:postbootstrap:playwright
+      npm-install-command: make BOOTSTRAP_SCOPE=@integration install
       download-artifact-name: 'compiled-libs'
       command: |
         mkdir target && \
+        npm run lerna:postbootstrap:playwright && \
         make INTEGRATION_SCOPE=$INTEGRATION_MODULE integration-test
       upload-artifact-name: 'test-integration-coverage-reports-playwright'
       upload-artifact-path: 'package.json "target/**/*"'
