--- a/package.json
+++ b/package.json
@@ -71,8 +71,7 @@
     "coverage:publish": "cat ./target/coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js",
     "commit": "bin/commit.ts",
     "lerna": "lerna",
-    "lerna:bootstrap:all": "lerna bootstrap && npm run lerna:postbootstrap:playwright",
-    "lerna:postbootstrap:playwright": "lerna run postbootstrap --scope '@serenity-js/playwright*' --scope '@integration/playwright*' --scope '@examples/playwright*'",
+    "lerna:bootstrap:all": "lerna bootstrap",
     "lerna:bootstrap:libs": "lerna bootstrap --scope '@serenity-js/*' --scope '@integration/testing-tools' --scope '@integration/cucumber-specs' --ignore='@documentation/*' --ignore '@examples/*' --include-dependencies",
     "lerna:bootstrap:site": "lerna bootstrap --scope '@serenity-js/*' --scope '@documentation/*' --ignore '@integration/*' --ignore '@examples/*' --include-dependencies",
     "lerna:bootstrap:@serenity-js": "lerna bootstrap --scope '@serenity-js/*' --ignore='@documentation/*' --ignore '@examples/*' --ignore '@integration/*' --include-dependencies",
