--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -163,9 +163,7 @@ jobs:
       download-artifact-name: 'compiled-libs'
       command: |
         mkdir target && \
-        cd packages/playwright && \
-        npx -y playwright install --with-deps && \
-        cd ../../ && \
+        npx --no playwright install --with-deps && \
         make INTEGRATION_SCOPE=$INTEGRATION_MODULE integration-test
       upload-artifact-name: 'test-integration-coverage-reports-playwright'
       upload-artifact-path: 'package.json "target/**/*"'
