--- a/.github/workflows/main-node-step.yaml
+++ b/.github/workflows/main-node-step.yaml
@@ -70,13 +70,10 @@ jobs:
       - name: Setup ChromeDriver filepath
         uses: ./.github/actions/setup-chromedriver-filepath
 
-#      - name: Install Node Modules (${{ inputs.npm-install-command }})
-#        uses: bahmutov/npm-install@v1
-#        with:
-#          install-command: ${{ inputs.npm-install-command }}
-
-      - name: Install Node Modules (no caching)
-        run: ${{ inputs.npm-install-command }}
+      - name: Install Node Modules (${{ inputs.npm-install-command }})
+        uses: bahmutov/npm-install@v1
+        with:
+          install-command: ${{ inputs.npm-install-command }}
 
       - name: Download artifact
         if: ${{ inputs.download-artifact-name || inputs.download-artifact-path }}
