--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -64,7 +64,7 @@ jobs:
     needs:
       - detect-source-code-changes
     if: needs.detect-source-code-changes.outputs.has_changes == 'true'
-    uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@fix/playwright-no-hoist'
+    uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
     with:
       node-version: 16.x
       npm-install-command: make BOOTSTRAP_SCOPE=libs install
