--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -70,6 +70,9 @@ jobs:
       npm-install-command: make BOOTSTRAP_SCOPE=libs install
       command: |
         ls -lah packages/playwright/node_modules && \
+        cat packages/playwright/node_modules/.package-lock.json && \
+        rm -rf packages/playwright/node_modules/playwright-core && \
+        rm -rf packages/playwright/node_modules/.package-lock.json && \
         make COMPILE_SCOPE=libs compile
       upload-artifact-name: 'compiled-libs'
       upload-artifact-path: 'package.json "integration/*/lib/*" "packages/*/lib/*"'
