--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "@serenity-js/core": "3.0.0-rc.37",
     "@serenity-js/web": "3.0.0-rc.37",
+    "playwright-core": "^1.29.0",
     "tiny-types": "^1.19.0"
   },
   "devDependencies": {
@@ -53,7 +54,6 @@
     "@types/mocha": "^10.0.1",
     "mocha": "^10.2.0",
     "nyc": "15.1.0",
-    "playwright-core": "1.29.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
