--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "lerna": "^6.1.0",
     "mocha-testdata": "^1.2.0",
     "nyc": "15.1.0",
+    "playwright-core": "^1.29.0",
     "rimraf": "^3.0.2",
     "semver": "^7.3.8",
     "sinon": "^15.0.1",
