feat(playwright-test): custom actors can now be defined in playwright config file
Also, simplied and documented the configuration options.

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -102,6 +102,7 @@ rules:
         acc: true
         arg: true
         args: true
+        Args: true
         attrs: true
         conf: true
         createProp: true
