docs(examples): added a missing dependency

--- a/examples/cucumber-reporting/package.json
+++ b/examples/cucumber-reporting/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@cucumber/cucumber": "^8.10.0",
+    "@serenity-js/assertions": "^3.0.0-rc",
     "@serenity-js/console-reporter": "^3.0.0-rc",
     "@serenity-js/core": "^3.0.0-rc",
     "@serenity-js/cucumber": "^3.0.0-rc",
