docs(website): corrected website build step on CI
it looks like Docusaurus API plugin can't find expectations defined as constants (as opposed to
functions) unless the code is compiled first.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -347,6 +347,7 @@ jobs:
     with:
       node-version: 16.x
       npm-install-command: make BOOTSTRAP_SCOPE=site install
+      download-artifact-name: 'compiled-libs'
       command: make site
       upload-artifact-name: 'website'
       upload-artifact-path: 'documentation/serenity-js.org/build'
