ci(github): make the relationship between website build and compilation explicit

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -318,6 +318,8 @@ jobs:
     needs:
       - detect-website-changes
       - detect-source-code-changes
+      - lint
+      - compile
       - artifacts-publish
     if: |
       always() &&
