ci(eslint): corrected ESLint rules
so that CodeFactor doesn't try to treat JavaScript examples as they were production TypeScript code

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -18,6 +18,9 @@ extends:
   - plugin:@typescript-eslint/recommended
   - plugin:mocha/recommended
   - plugin:unicorn/recommended
+ignorePatterns:
+  - documentation/website/**
+  - integration/**/examples/**/*.js
 env:
   node: true
 overrides:
