--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "cuid": "^2.1.8",
+    "chalk": "^4.1.2",
     "diff": "^5.1.0",
     "error-stack-parser": "2.1.4",
     "fast-glob": "^3.2.12",
