--- a/packages/serenity-bdd/package.json
+++ b/packages/serenity-bdd/package.json
@@ -49,6 +49,7 @@
     "@serenity-js/core": "3.0.0-rc.40",
     "@serenity-js/rest": "3.0.0-rc.40",
     "axios": "^1.2.2",
+    "ansi-regex": "^5.0.1",
     "chalk": "^4.1.2",
     "find-java-home": "^2.0.0",
     "https-proxy-agent": "^5.0.1",
