fix(webdriverio): enable support for WebdriverIO 8

--- a/.mocharc.yml
+++ b/.mocharc.yml
@@ -6,3 +6,9 @@ reporter: dot
 require: 'ts-node/register'
 timeout: 10000
 v8-stack-trace-limit: 100
+
+#extension:
+#  - 'ts'
+#node-option:
+#  - 'experimental-specifier-resolution=node'
+#  - 'loader=ts-node/esm'
