--- a/integration/protractor-cucumber/package.json
+++ b/integration/protractor-cucumber/package.json
@@ -25,8 +25,7 @@
     "url": "https://github.com/serenity-js/serenity-js/issues"
   },
   "engines": {
-    "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "node": "^16.13 || >=18"
   },
   "dependencies": {
     "@cucumber/cucumber": "^8.10.0",
