--- a/integration/webdriverio-cucumber/package.json
+++ b/integration/webdriverio-cucumber/package.json
@@ -25,8 +25,7 @@
     "url": "https://github.com/serenity-js/serenity-js/issues"
   },
   "engines": {
-    "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "node": "^16.13 || >=18"
   },
   "dependencies": {
     "@cucumber/cucumber": "^8.10.0",
@@ -34,12 +33,12 @@
     "@serenity-js/core": "^3.0.0-rc",
     "@serenity-js/cucumber": "^3.0.0-rc",
     "@serenity-js/webdriverio": "^3.0.0-rc",
-    "@wdio/cli": "^7.29.1",
-    "@wdio/local-runner": "^7.29.1",
-    "@wdio/cucumber-framework": "^7.29.0",
-    "@wdio/reporter": "^7.29.1",
-    "@wdio/spec-reporter": "^7.29.1",
-    "webdriverio": "^7.29.1"
+    "@wdio/cli": "^8.3.3",
+    "@wdio/local-runner": "^8.3.3",
+    "@wdio/cucumber-framework": "^8.3.0",
+    "@wdio/reporter": "^8.3.0",
+    "@wdio/spec-reporter": "^8.3.0",
+    "webdriverio": "^8.3.3"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.1",
