--- a/packages/local-server/package.json
+++ b/packages/local-server/package.json
@@ -45,8 +45,7 @@
     "url": "https://github.com/serenity-js/serenity-js/issues"
   },
   "engines": {
-    "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "node": "^16.13 || >=18"
   },
   "dependencies": {
     "@serenity-js/core": "3.0.0-rc.41",
@@ -63,7 +62,7 @@
     "@types/hapi": "^18.0.8",
     "@types/mocha": "^10.0.1",
     "@types/restify": "^8.5.5",
-    "axios": "^1.2.2",
+    "axios": "1.2.2",
     "express": "^4.18.2",
     "koa": "^2.14.1",
     "mocha": "^10.2.0",
