--- a/packages/serenity-bdd/package.json
+++ b/packages/serenity-bdd/package.json
@@ -41,15 +41,14 @@
     "url": "https://github.com/serenity-js/serenity-js/issues"
   },
   "engines": {
-    "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "node": "^16.13 || >=18"
   },
   "dependencies": {
     "@serenity-js/assertions": "3.0.0-rc.41",
     "@serenity-js/core": "3.0.0-rc.41",
     "@serenity-js/rest": "3.0.0-rc.41",
     "ansi-regex": "^5.0.1",
-    "axios": "^1.2.2",
+    "axios": "1.2.2",
     "chalk": "^4.1.2",
     "find-java-home": "^2.0.0",
     "https-proxy-agent": "^5.0.1",
