--- a/documentation/website/package.json
+++ b/documentation/website/package.json
@@ -29,8 +29,7 @@
     "url": "https://github.com/serenity-js/serenity-js/issues"
   },
   "engines": {
-    "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "node": "^16.13 || >=18"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
