--- a/examples/webdriverio-cucumber/package.json
+++ b/examples/webdriverio-cucumber/package.json
@@ -29,8 +29,7 @@
     "url": "https://github.com/serenity-js/serenity-js/issues"
   },
   "engines": {
-    "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "node": "^16.13 || >=18"
   },
   "devDependencies": {
     "@cucumber/cucumber": "^8.10.0",
@@ -39,13 +38,13 @@
     "@serenity-js/cucumber": "^3.0.0-rc",
     "@serenity-js/webdriverio": "^3.0.0-rc",
     "@serenity-js/serenity-bdd": "^3.0.0-rc",
-    "@wdio/cli": "^7.29.1",
-    "@wdio/local-runner": "^7.29.1",
-    "@wdio/spec-reporter": "^7.29.1",
-    "@wdio/types": "^7.26.0",
-    "@wdio/reporter": "^7.29.1",
+    "@wdio/cli": "^8.3.3",
+    "@wdio/local-runner": "^8.3.3",
+    "@wdio/spec-reporter": "^8.3.0",
+    "@wdio/types": "^8.3.0",
+    "@wdio/reporter": "^8.3.0",
     "npm-failsafe": "^1.0.0",
-    "webdriverio": "^7.29.1",
+    "webdriverio": "^8.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
