--- a/examples/webdriverio-jasmine/package.json
+++ b/examples/webdriverio-jasmine/package.json
@@ -29,8 +29,7 @@
     "url": "https://github.com/serenity-js/serenity-js/issues"
   },
   "engines": {
-    "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "node": "^16.13 || >=18"
   },
   "devDependencies": {
     "@serenity-js/console-reporter": "^3.0.0-rc",
@@ -38,15 +37,15 @@
     "@serenity-js/jasmine": "^3.0.0-rc",
     "@serenity-js/webdriverio": "^3.0.0-rc",
     "@serenity-js/serenity-bdd": "^3.0.0-rc",
-    "@wdio/cli": "^7.29.1",
-    "@wdio/local-runner": "^7.29.1",
-    "@wdio/jasmine-framework": "^7.26.0",
-    "@wdio/spec-reporter": "^7.29.1",
-    "@wdio/reporter": "^7.29.1",
+    "@wdio/cli": "^8.3.3",
+    "@wdio/local-runner": "^8.3.3",
+    "@wdio/jasmine-framework": "^8.3.3",
+    "@wdio/spec-reporter": "^8.3.0",
+    "@wdio/reporter": "^8.3.0",
     "@types/jasmine": "^3.10.7",
     "jasmine": "^3.99.0",
     "npm-failsafe": "^1.0.0",
-    "webdriverio": "^7.29.1",
+    "webdriverio": "^8.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
