--- a/integration/cucumber-8-legacy-api/package.json
+++ b/integration/cucumber-8-legacy-api/package.json
@@ -25,8 +25,7 @@
     "url": "https://github.com/serenity-js/serenity-js/issues"
   },
   "engines": {
-    "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "node": "^16.13 || >=18"
   },
   "devDependencies": {
     "@cucumber/cucumber": "8.6.0",
