--- a/integration/protractor-web/package.json
+++ b/integration/protractor-web/package.json
@@ -34,8 +34,7 @@
     "url": "https://github.com/serenity-js/serenity-js/issues"
   },
   "engines": {
-    "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "node": "^16.13 || >=18"
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
