--- a/integration/web-specs/package.json
+++ b/integration/web-specs/package.json
@@ -31,8 +31,7 @@
     "url": "https://github.com/serenity-js/serenity-js/issues"
   },
   "engines": {
-    "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "node": "^16.13 || >=18"
   },
   "dependencies": {
     "express": "^4.18.2"
