--- a/integration/webdriverio-web/package.json
+++ b/integration/webdriverio-web/package.json
@@ -36,8 +36,7 @@
     "url": "https://github.com/serenity-js/serenity-js/issues"
   },
   "engines": {
-    "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "node": "^16.13 || >=18"
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
@@ -49,16 +48,16 @@
     "@serenity-js/webdriverio": "^3.0.0-rc",
     "@serenity-js/web": "^3.0.0-rc",
     "@types/mocha": "^10.0.1",
-    "@wdio/cli": "^7.29.1",
-    "@wdio/local-runner": "^7.29.1",
-    "@wdio/spec-reporter": "^7.29.1",
+    "@wdio/cli": "^8.3.3",
+    "@wdio/local-runner": "^8.3.3",
+    "@wdio/spec-reporter": "^8.3.0",
     "chromedriver": "^108.0.0",
     "ci-info": "^3.7.1",
     "cross-env": "^7.0.3",
     "mocha": "^10.2.0",
     "npm-failsafe": "^1.0.0",
     "wdio-chromedriver-service": "7.3.2",
-    "webdriverio": "^7.29.1",
+    "webdriverio": "^8.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
