--- a/packages/console-reporter/package.json
+++ b/packages/console-reporter/package.json
@@ -38,8 +38,7 @@
     "url": "https://github.com/serenity-js/serenity-js/issues"
   },
   "engines": {
-    "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "node": "^16.13 || >=18"
   },
   "dependencies": {
     "@serenity-js/core": "3.0.0-rc.41",
