--- a/packages/cucumber/package.json
+++ b/packages/cucumber/package.json
@@ -39,8 +39,7 @@
     "url": "https://github.com/serenity-js/serenity-js/issues"
   },
   "engines": {
-    "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "node": "^16.13 || >=18"
   },
   "dependencies": {
     "@cucumber/messages": "^20.0.0",
