--- a/packages/protractor/package.json
+++ b/packages/protractor/package.json
@@ -44,8 +44,7 @@
     "url": "https://github.com/serenity-js/serenity-js/issues"
   },
   "engines": {
-    "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "node": "^16.13 || >=18"
   },
   "dependencies": {
     "@serenity-js/assertions": "3.0.0-rc.41",
@@ -85,7 +84,7 @@
     "@types/html-minifier": "^4.0.2",
     "@types/mocha": "^10.0.1",
     "@types/selenium-webdriver": "^3.0.20",
-    "axios": "^1.2.2",
+    "axios": "1.2.2",
     "body-parser": "^1.20.1",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
