--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -41,12 +41,11 @@
     "url": "https://github.com/serenity-js/serenity-js/issues"
   },
   "engines": {
-    "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "node": "^16.13 || >=18"
   },
   "dependencies": {
     "@serenity-js/core": "3.0.0-rc.41",
-    "axios": "^1.2.2"
+    "axios": "1.2.2"
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
