--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -79,6 +79,7 @@
     "@wdio/local-runner": "^8.3.3",
     "@wdio/mocha-framework": "^8.3.0",
     "@wdio/spec-reporter": "^8.3.0",
+    "@wdio/types": "^8.3.0",
     "axios": "1.2.2",
     "cross-env": "^7.0.3",
     "mocha": "^10.2.0",
