ci(eslint): enabled consistent-type-imports rule
Thanks for the tip, @christian-bromann

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -29,6 +29,8 @@ overrides:
       "@typescript-eslint/explicit-module-boundary-types":
         - error
         - allowHigherOrderFunctions: true
+      "@typescript-eslint/consistent-type-imports":
+        - error
 rules:
   simple-import-sort/imports: error
   simple-import-sort/exports: error
