--- a/examples/calculator-app/package.json
+++ b/examples/calculator-app/package.json
@@ -14,7 +14,7 @@
     "access": "private"
   },
   "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "types": "lib/index.d.ts",
   "scripts": {
     "clean": "rimraf target",
     "test": "mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'",
