ci(renovate): corrected package patterns
so that wdio-chromedriver-service doesn't get picked up together with chromedriver

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -140,7 +140,7 @@
         "@types/sinon",
         "@types/sinon-chai",
         "chai-as-promised",
-        "chromedriver",
+        "^chromedriver$",
         "coveralls",
         "cz-conventional-changelog",
         "cz-customizable",
