ci(github): tweaked changed files detection
This should address the (configuration?) issue where tj-actions/changed-files
would only detect one
last commit on push events

Related tickets: re: tj-actions/changed-files#953

--- a/.github/workflows/main-detect-changes.yaml
+++ b/.github/workflows/main-detect-changes.yaml
@@ -59,6 +59,7 @@ jobs:
         with:
           files: ${{ inputs.files }}
           files_ignore: ${{ inputs.files-ignore }}
+          since_last_remote_commit: true
 
       - name: Summary (no changes)
         if: steps.changed-files.outputs.any_changed == 'false'
