--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -200,10 +200,11 @@ jobs:
       - test-linux-node-lts-active
       - test-integration-playwright
       - test-integration
-    uses: 'serenity-js/serenity-js/.github/workflows/main-collect-artifacts.yaml@main'
+#    uses: 'serenity-js/serenity-js/.github/workflows/main-collect-artifacts.yaml@main'
+    uses: 'serenity-js/serenity-js/.github/workflows/main-collect-artifacts.yaml@features/time'
     with:
       upload-artifact-name: 'aggregated-code-coverage'
-      upload-artifact-path: 'package.json "**/coverage-final.json"'
+      upload-artifact-path: 'package.json "packages/*/target/**/coverage-final.json" "integration/*/target/**/coverage-final.json"'
 
   coverage-report:
     name: 'Coverage: report'
