fix(core): support for NPM 9

--- a/examples/calculator-app/package.json
+++ b/examples/calculator-app/package.json
@@ -32,7 +32,7 @@
   },
   "engines": {
     "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "npm": "^6 || ^7 || ^8 || ^9"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
