--- a/integration/cucumber-specs/package.json
+++ b/integration/cucumber-specs/package.json
@@ -27,7 +27,7 @@
   },
   "engines": {
     "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "npm": "^6 || ^7 || ^8 || ^9"
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
