--- a/documentation/website/package.json
+++ b/documentation/website/package.json
@@ -30,7 +30,7 @@
   },
   "engines": {
     "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "npm": "^6 || ^7 || ^8 || ^9"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
