--- a/examples/webdriverio-cucumber/package.json
+++ b/examples/webdriverio-cucumber/package.json
@@ -30,7 +30,7 @@
   },
   "engines": {
     "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "npm": "^6 || ^7 || ^8 || ^9"
   },
   "devDependencies": {
     "@cucumber/cucumber": "^8.11.0",
