--- a/integration/webdriverio-web/package.json
+++ b/integration/webdriverio-web/package.json
@@ -37,7 +37,7 @@
   },
   "engines": {
     "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "npm": "^6 || ^7 || ^8 || ^9"
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
