--- a/packages/cucumber/package.json
+++ b/packages/cucumber/package.json
@@ -40,7 +40,7 @@
   },
   "engines": {
     "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8"
+    "npm": "^6 || ^7 || ^8 || ^9"
   },
   "dependencies": {
     "@cucumber/messages": "^20.0.0",
