--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -347,6 +347,8 @@ jobs:
   website-publish:
     name: 'Website: publish'
     if: github.ref == 'refs/heads/main'
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     needs:
       - website-build
