--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -174,6 +174,7 @@ jobs:
           "cucumber-6",
           "cucumber-7",
           "cucumber-8",
+          "cucumber-9",
           "jasmine",
           "mocha",
           "protractor-test-runners",
