--- a/integration/cucumber-9/package.json
+++ b/integration/cucumber-9/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@examples/webdriverio-cucumber",
+  "name": "@integration/cucumber-9",
   "version": "3.0.0",
-  "description": "Example implementation of a test suite using WebdriverIO and Cucumber",
+  "description": "Specs verifying integration between Serenity/JS and Cucumber.js",
   "author": {
     "name": "Jan Molak",
     "email": "jan.molak@smartcodeltd.co.uk",
@@ -15,11 +15,7 @@
   },
   "scripts": {
     "clean": "rimraf target",
-    "test:update-serenity": "serenity-bdd update --ignoreSSL",
-    "test:acceptance": "wdio wdio.conf.ts",
-    "test:report": "serenity-bdd run",
-    "test": "failsafe clean test:update-serenity test:acceptance test:report",
-    "verify": "npm test"
+    "test": "nyc mocha --parallel --config .mocharc.yml"
   },
   "repository": {
     "type": "git",
@@ -34,18 +30,14 @@
   },
   "devDependencies": {
     "@cucumber/cucumber": "^9.1.0",
-    "@serenity-js/console-reporter": "^3.0.0-rc",
+    "@integration/testing-tools": "3.0.0",
+    "@integration/cucumber-specs": "3.0.0",
     "@serenity-js/core": "^3.0.0-rc",
     "@serenity-js/cucumber": "^3.0.0-rc",
-    "@serenity-js/webdriverio": "^3.0.0-rc",
-    "@serenity-js/serenity-bdd": "^3.0.0-rc",
-    "@wdio/cli": "^7.30.2",
-    "@wdio/local-runner": "^7.30.2",
-    "@wdio/spec-reporter": "^7.30.2",
-    "@wdio/types": "^7.30.2",
-    "@wdio/reporter": "^7.30.2",
-    "npm-failsafe": "^1.0.0",
-    "webdriverio": "^7.30.2",
+    "@types/mocha": "^10.0.1",
+    "@types/chai": "^4.3.4",
+    "mocha": "^10.2.0",
+    "mocha-multi": "^1.1.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
