--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "integration-test:cucumber-6": "lerna run test --scope @integration/cucumber-6",
     "integration-test:cucumber-7": "lerna run test --scope @integration/cucumber-7",
     "integration-test:cucumber-8": "lerna run test --concurrency 1 --scope @integration/cucumber-8-*",
+    "integration-test:cucumber-9": "lerna run test --concurrency 1 --scope @integration/cucumber-9",
     "integration-test:jasmine": "lerna run test --concurrency 1 --scope @integration/jasmine",
     "integration-test:mocha": "lerna run test --concurrency 1 --scope @integration/mocha",
     "integration-test:playwright-all": "lerna run test --concurrency 1 --scope @integration/playwright-*",
