--- a/packages/cucumber/package.json
+++ b/packages/cucumber/package.json
@@ -43,14 +43,14 @@
     "npm": "^6 || ^7 || ^8 || ^9"
   },
   "dependencies": {
-    "@cucumber/messages": "^20.0.0",
+    "@cucumber/messages": "21.0.1",
     "@serenity-js/core": "3.0.1",
     "cli-table3": "^0.6.3",
     "gherkin": "5.1.0",
     "tiny-types": "^1.19.1"
   },
   "peerDependencies": {
-    "@cucumber/cucumber": "^7.3.2 || ^8.5.0",
+    "@cucumber/cucumber": "^7.3.2 || ^8.5.0 || ^9.1.0",
     "cucumber": "^1.3.3 || ^2.3.1 || ^3.2.1 || ^4.2.1 || ^5.0.0 || ^6.0.0"
   },
   "peerDependenciesMeta": {
@@ -62,7 +62,7 @@
     }
   },
   "devDependencies": {
-    "@cucumber/cucumber": "^8.11.0",
+    "@cucumber/cucumber": "^9.1.0",
     "@integration/testing-tools": "3.0.0",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
