fix(core): pinned dependencies on Serenity/JS modules
This is to avoid possible compatibility issues.

--- a/examples/cucumber-reporting/package.json
+++ b/examples/cucumber-reporting/package.json
@@ -36,12 +36,12 @@
   },
   "devDependencies": {
     "@cucumber/cucumber": "^9.1.0",
-    "@serenity-js/assertions": "^3.0.0-rc",
-    "@serenity-js/console-reporter": "^3.0.0-rc",
-    "@serenity-js/core": "^3.0.0-rc",
-    "@serenity-js/cucumber": "^3.0.0-rc",
-    "@serenity-js/rest": "^3.0.0-rc",
-    "@serenity-js/serenity-bdd": "^3.0.0-rc",
+    "@serenity-js/assertions": "3.0.1",
+    "@serenity-js/console-reporter": "3.0.1",
+    "@serenity-js/core": "3.0.1",
+    "@serenity-js/cucumber": "3.0.1",
+    "@serenity-js/rest": "3.0.1",
+    "@serenity-js/serenity-bdd": "3.0.1",
     "@types/chai": "^4.3.4",
     "npm-failsafe": "^1.0.0",
     "ts-node": "^10.9.1",
