--- a/examples/webdriverio-mocha/package.json
+++ b/examples/webdriverio-mocha/package.json
@@ -33,11 +33,11 @@
     "npm": "^6 || ^7 || ^8 || ^9"
   },
   "devDependencies": {
-    "@serenity-js/console-reporter": "^3.0.0-rc",
-    "@serenity-js/core": "^3.0.0-rc",
-    "@serenity-js/mocha": "^3.0.0-rc",
-    "@serenity-js/webdriverio": "^3.0.0-rc",
-    "@serenity-js/serenity-bdd": "^3.0.0-rc",
+    "@serenity-js/console-reporter": "3.0.1",
+    "@serenity-js/core": "3.0.1",
+    "@serenity-js/mocha": "3.0.1",
+    "@serenity-js/webdriverio": "3.0.1",
+    "@serenity-js/serenity-bdd": "3.0.1",
     "@wdio/cli": "^7.30.2",
     "@wdio/local-runner": "^7.30.2",
     "@wdio/mocha-framework": "^7.30.2",
