--- a/integration/cucumber-8-javascript-api/package.json
+++ b/integration/cucumber-8-javascript-api/package.json
@@ -32,8 +32,8 @@
     "@cucumber/cucumber": "^8.11.0",
     "@integration/testing-tools": "3.0.0",
     "@integration/cucumber-specs": "3.0.0",
-    "@serenity-js/core": "^3.0.0-rc",
-    "@serenity-js/cucumber": "^3.0.0-rc",
+    "@serenity-js/core": "3.0.1",
+    "@serenity-js/cucumber": "3.0.1",
     "@types/mocha": "^10.0.1",
     "@types/chai": "^4.3.4",
     "mocha": "^10.2.0",
