--- a/integration/protractor-mocha/package.json
+++ b/integration/protractor-mocha/package.json
@@ -30,10 +30,10 @@
   },
   "dependencies": {
     "@integration/testing-tools": "3.0.0",
-    "@serenity-js/core": "^3.0.0-rc",
-    "@serenity-js/mocha": "^3.0.0-rc",
-    "@serenity-js/protractor": "^3.0.0-rc",
-    "@serenity-js/web": "^3.0.0-rc",
+    "@serenity-js/core": "3.0.1",
+    "@serenity-js/mocha": "3.0.1",
+    "@serenity-js/protractor": "3.0.1",
+    "@serenity-js/web": "3.0.1",
     "protractor": "^7.0.0"
   },
   "devDependencies": {
