--- a/integration/web-specs/package.json
+++ b/integration/web-specs/package.json
@@ -39,12 +39,12 @@
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
-    "@serenity-js/assertions": "^3.0.0-rc",
-    "@serenity-js/core": "^3.0.0-rc",
-    "@serenity-js/local-server": "^3.0.0-rc",
-    "@serenity-js/mocha": "^3.0.0-rc",
-    "@serenity-js/serenity-bdd": "^3.0.0-rc",
-    "@serenity-js/web": "^3.0.0-rc",
+    "@serenity-js/assertions": "3.0.1",
+    "@serenity-js/core": "3.0.1",
+    "@serenity-js/local-server": "3.0.1",
+    "@serenity-js/mocha": "3.0.1",
+    "@serenity-js/serenity-bdd": "3.0.1",
+    "@serenity-js/web": "3.0.1",
     "@types/mocha": "^10.0.1",
     "cross-env": "^7.0.3",
     "mocha": "^10.2.0",
