--- a/packages/protractor/package.json
+++ b/packages/protractor/package.json
@@ -56,9 +56,9 @@
     "tiny-types": "^1.19.1"
   },
   "peerDependencies": {
-    "@serenity-js/cucumber": "^3.0.0-rc",
-    "@serenity-js/jasmine": "^3.0.0-rc",
-    "@serenity-js/mocha": "^3.0.0-rc",
+    "@serenity-js/cucumber": "^3.0.0",
+    "@serenity-js/jasmine": "^3.0.0",
+    "@serenity-js/mocha": "^3.0.0",
     "protractor": "^5.0.0 || ^7.0.0"
   },
   "peerDependenciesMeta": {
