--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -55,9 +55,9 @@
     "tiny-types": "^1.19.1"
   },
   "peerDependencies": {
-    "@serenity-js/cucumber": "^3.0.0-rc",
-    "@serenity-js/jasmine": "^3.0.0-rc",
-    "@serenity-js/mocha": "^3.0.0-rc",
+    "@serenity-js/cucumber": "^3.0.0",
+    "@serenity-js/jasmine": "^3.0.0",
+    "@serenity-js/mocha": "^3.0.0",
     "@wdio/cli": "^7.30.2",
     "webdriverio": "^7.30.2"
   },
