--- a/integration/mocha/package.json
+++ b/integration/mocha/package.json
@@ -30,9 +30,9 @@
   },
   "dependencies": {
     "@integration/testing-tools": "3.0.0",
-    "@serenity-js/assertions": "^3.0.0-rc",
-    "@serenity-js/core": "^3.0.0-rc",
-    "@serenity-js/mocha": "^3.0.0-rc"
+    "@serenity-js/assertions": "3.0.1",
+    "@serenity-js/core": "3.0.1",
+    "@serenity-js/mocha": "3.0.1"
   },
   "devDependencies": {
     "@types/chai": "^4.3.4",
