--- a/integration/protractor-cucumber/package.json
+++ b/integration/protractor-cucumber/package.json
@@ -31,10 +31,10 @@
   "dependencies": {
     "@cucumber/cucumber": "^9.1.0",
     "@integration/testing-tools": "3.0.0",
-    "@serenity-js/core": "^3.0.0-rc",
-    "@serenity-js/cucumber": "^3.0.0-rc",
-    "@serenity-js/protractor": "^3.0.0-rc",
-    "@serenity-js/web": "^3.0.0-rc",
+    "@serenity-js/core": "3.0.1",
+    "@serenity-js/cucumber": "3.0.1",
+    "@serenity-js/protractor": "3.0.1",
+    "@serenity-js/web": "3.0.1",
     "protractor": "^7.0.0"
   },
   "devDependencies": {
