fix(core): replaced dependency on depracated cuid with cuid2

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -21,12 +21,11 @@
       "groupName": "Core dependencies",
       "labels": [ "@serenity-js/core" ],
       "packagePatterns": [
-        "@types/cuid",
+        "@paralleldrive/cuid2",
         "@types/diff",
         "@types/filenamify",
         "@types/validate-npm-package-name",
         "assertion-error-formatter",
-        "cuid",
         "diff",
         "error-stack-parser",
         "fast-glob",
