--- a/examples/calculator-app/package.json
+++ b/examples/calculator-app/package.json
@@ -46,8 +46,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@paralleldrive/cuid2": "^2.2.0",
     "body-parser": "^1.20.2",
-    "cuid": "^2.1.8",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "tiny-types": "^1.19.1"
